Configure swagger ui
