# http/api/v1/user/profile.handler.go
@@ -1,12 +1,13 @@
 package user
 
 import (
+	nethttp "net/http"
+
 	punqy "github.com/punqy/core"
 	"github.com/punqy/punqy/model/http/user"
 	"github.com/punqy/punqy/model/storage"
 	"github.com/punqy/punqy/service/app/http"
 	userservice "github.com/punqy/punqy/service/user"
-	nethttp "net/http"
 )
 
 type ProfileHandler interface {
@@ -34,20 +35,20 @@ func (h *profileHandler) Routes() punqy.RouteList {
 }
 
 // @Summary      Get profile
-// @Description  Get current (authentiacted) user's profile
+// @Description  Get current (authenticated) user's profile
 // @Tags         Profile
 // @Accept       json
 // @Produce      json
 // @Success      200 {object} punqy.JsonResponseFormat{payload=storage.User}
 // @Failure      500 {object} punqy.JsonResponseFormat{payload=string}
-// @Router       /profile [get]
+// @Router       /user/profile [get]
 func (h *profileHandler) get(req punqy.Request) punqy.Response {
 	usr := req.UserValue(punqy.SecurityContextKey).(punqy.SecurityContext).Token.User()
 	return punqy.NewJsonResponse(usr, nethttp.StatusOK, nil)
 }
 
 // @Summary      Patch profile
-// @Description  Patch current (authentiacted) user's profile
+// @Description  Patch current (authenticated) user's profile
 // @Tags         Profile
 // @Accept       json
 // @Produce      json
@@ -55,7 +56,7 @@ func (h *profileHandler) get(req punqy.Request) punqy.Response {
 // @Success      200 {object} punqy.JsonResponseFormat{payload=string}
 // @Success      422 {object} punqy.JsonResponseFormat{payload=common.ValidationError} "validation error"
 // @Failure      500 {object} punqy.JsonResponseFormat{payload=string}
-// @Router       /profile [patch]
+// @Router       /user/profile [patch]
 func (h *profileHandler) patch(req punqy.Request) punqy.Response {
 	var request user.PatchProfileRequest
 	if err := req.ParseForm(&request); err != nil {
@@ -71,7 +72,7 @@ func (h *profileHandler) patch(req punqy.Request) punqy.Response {
 }
 
 // @Summary      Change password
-// @Description  Change password of current (authentiacted) user
+// @Description  Change password of current (authenticated) user
 // @Tags         Profile
 // @Accept       json
 // @Produce      json
@@ -79,7 +80,7 @@ func (h *profileHandler) patch(req punqy.Request) punqy.Response {
 // @Success      200 {object} punqy.JsonResponseFormat{payload=string} "ok"
 // @Success      422 {object} punqy.JsonResponseFormat{payload=common.ValidationError} "validation error"
 // @Failure      500 {object} punqy.JsonResponseFormat{payload=string} "internal error"
-// @Router       /profile/change-pass [post]
+// @Router       /user/profile/change-pass [post]
 func (h *profileHandler) changePass(req punqy.Request) punqy.Response {
 	var request user.ChangePasswordRequest
 	if err := req.ParseForm(&request); err != nil {
